# PlantCLEF2026

./: .gitignore  README.md  test_pipeline_hpc.py
paper1_preprocessing/: .gitignore  Cargo.toml  LICENSE  README.md
paper1_preprocessing/lib-cuda-rs/: Cargo.toml  build.rs
paper1_preprocessing/lib-cuda-rs/kernels/: api.cu  attn.cu  interpolate2d.cu  kernels.h  matmult.cu  misc.cu  softmax.cu
paper1_preprocessing/lib-cuda-rs/src/: ffi.rs  lib.rs
paper1_preprocessing/lib-cuda-rs/tests/: tests.rs
paper1_preprocessing/src/: dinov2reg4_mod.rs  dinov2reg4_wsa.rs  lib.rs  lib_aggregation.rs  lib_dataset.rs  lib_files.rs  lib_inference.rs  lib_model.rs  lib_soumission.rs  main.rs
paper1_preprocessing/tests/: integration_test.rs
paper1_preprocessing/tests/references/: PlantCLEF2025test_5_2026-01-03_predictions_test_baseline518.csv  PlantCLEF2025test_5_2026-01-03_submission_test_baseline518.csv  PlantCLEF2025test_5_tiling10_backendwand_2026-01-03_rust_predictions.csv  PlantCLEF2025test_5_tiling10_backendwand_2026-01-03_submission_seuil_10.0prcts.csv  PlantCLEF2025test_5_tiling1_backendwand_2026-01-03_rust_predictions.csv
paper2_postprocessing/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
paper2_postprocessing/plantclef/: cli.py  config.py  model_setup.py  plotting.py  serde.py  spark.py  train_species_ids.txt
paper2_postprocessing/plantclef/classification/: __init__.py  aggregation.py  aggregation_geolocation.py  naive_baseline.py  params.py  submission.py  transform.py  workflow.py
paper2_postprocessing/plantclef/detection/: classes.py  params.py  transform.py
paper2_postprocessing/plantclef/embedding/: transform.py
paper2_postprocessing/plantclef/ensemble/: workflow.py
paper2_postprocessing/plantclef/masking/: __init__.py  params.py  transform.py  workflow.py
paper2_postprocessing/plantclef/morph/: operations.py  plotting.py  stats.py  workflow.py
paper2_postprocessing/plantclef/preprocessing/: __init__.py  create_test_subset.py  create_top_species_subset.py  crop_resize_images.py  image_to_parquet.py  mask_to_parquet.py  test_to_parquet.py
paper2_postprocessing/plantclef/retrieval/: __init__.py
paper2_postprocessing/plantclef/workflow/: workflow.py
paper2_postprocessing/scripts/: activate.sh  check-parquet.sh  extract-data.sh  nvidia-logs.sh  slurm-alloc.py  sweep-logs.sh
paper2_postprocessing/scripts/sbatch/: morph-stats.sbatch  slurm-embed-large.sbatch  slurm-embed.sbatch  slurm-extract-data.sbatch  slurm-masking.sbatch  (+2 more)
pipeline/: PIPELINE.md  (+10 more)
(+52 files in other folders)
