[package]
name = "plantclef2025-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
lib_cuda_rs         = { path = "lib-cuda-rs", package = "lib-cuda-rs" }

candle-flash-attn   = { version = "0.9.1"} 
candle-core         = { version = "0.9.1", features = ["cudnn"] }
candle-examples     = { version = "0.9.1", features = ["cudnn"] } 
candle-nn           = { version = "0.9.1", features = ["cudnn"] } 
candle-transformers = { version = "0.9.1", features = ["cuda"] } 

image = { version = "0.25.6", default-features = false, features = ["jpeg", "png", "bmp"] }
csv = "1.3.1"
hf-hub = "0.4.2"
magick_rust = "1.0.0"
